examples/test/testpolicy4172.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4172
  namespace: namespace217
spec:
  podSelector:
    matchLabels:
      key37: value37
      key8: value21
      key42: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value47
          key21: value7
      podSelector:
        matchLabels:
          key24: value5
